--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
+    "netlify-cli": "^9.13.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
